--- a/sgthtml.html
+++ b/sgthtml.html
@@ -9,6 +9,7 @@
   <body>
    <div class="myclass">
    <div class="myclass1">
+      <img src="sgtlogo.png" class="logo">
    <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">Outlets</a></li>
